--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -191,7 +191,8 @@
     </div>
     <div class="portfolio_showboard grid-x">
         <div class="portfolio_close">
-            <span class="fa fa-times"></span>
+            <div class="top"></div>
+            <div class="bot"></div>
         </div>
         <div class="cell small-8 small-offset-2 large-6 large-offset-3 portfolio_content_wrap">
             <img src="" alt="" class="portfolio_img">
