added text content

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -87,13 +87,10 @@
     <div class="cell large-4 show-for-large"></div>
     <div class="dev grid-x cell large-8">
         <h3 class="cell large-6 large-offset-5">Development</h3>
-        <p class="cell medium-10 medium-offset-1 large-6 large-offset-5">Nunc velit arcu, porta sit amet nisl non,
-            semper consectetur eros. Sed
-            placerat porta pretium. Donec
-            pellentesque
-            blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In elementum
-            vestibulum
-            mi, at faucibus lorem egestas ut.</p>
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-5">Website development is fun and challenging. I
+            usually plan ahead before coding, deciding what website framework will need to use, is it necessary to use a
+            Content Management System, what kind of development dependencies are necessary for developing, and what
+            logic structure will the back-end part need. All these steps are important for web developing.</p>
         <div class="cell large-6 large-offset-5">
             <div class="section_hr"></div>
         </div>
@@ -115,11 +112,11 @@
     </div>
     <div class="design grid-x cell large-8">
         <h3 class="cell large-10 large-offset-2">Design</h3>
-        <p class="cell medium-10 medium-offset-1 large-6 large-offset-2">Nunc velit arcu, porta sit amet nisl non,
-            semper consectetur eros.
-            Sevd placerat porta pretium. Donec
-            pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
-            elementum vestibulum mi, at faucibus lorem egestas ut.</p>
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-2">The most important part of design is
+            understanding what the clients want. Communicating and researching for clients are very crucial.
+            It is always the best solution that communicating and showing clients with examples to understand their
+            thoughts. After the communication, it is the time to do research for designers themselves and creating
+            multiple versions of design products, and let the clients pick up the most desirable one.</p>
         <div class="cell large-10 large-offset-2">
             <div class="section_hr"></div>
         </div>
@@ -140,11 +137,10 @@
     <div class="cell large-4 show-for-large"></div>
     <div class="photography grid-x cell large-8">
         <h3 class="cell large-6 large-offset-5">Photography</h3>
-        <p class="cell medium-10 medium-offset-1 large-6 large-offset-5">Nunc velit arcu, porta sit amet nisl non,
-            semper consectetur eros.
-            Sevd placerat porta pretium. Donec
-            pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
-            elementum vestibulum mi, at faucibus lorem egestas ut.</p>
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-5">Five-year photography experience brings me
+            sharp eyes for capturing the beautiful moment. Whether it is a event shoot, wedding shoot, or a portrait
+            shoot, I can always find out the best angle and moment quickly with my professional gear. I will also have
+            the edited photos ready in a quick time without missing any quality.</p>
         <div class="cell large-6 large-offset-5">
             <div class="section_hr"></div>
         </div>
@@ -155,9 +151,9 @@
         <h4 class="cell large-10 large-offset-2">My gear</h4>
         <div class="my_gear cell medium-10 medium-offset-1 large-9 large-offset-2">
             <img src="images/lr_icon.svg" alt="Lightroom">
-            <p>Nunc velit arcu, porta sit amet nisl non, semper consectetur eros. Sevd placerat porta pretium. Donec
-                pellentesque blandit tellus sed vehicula. Sed iaculis sagittis venenatis. Phasellus eget augue urna. In
-                elementum vestibulum mi, at faucibus lorem egestas ut.</p>
+            <p>Canon 5D Mark III and Adobe Lightroom are my best photography friends. Also, I have a wide angle lens
+                which is 16mm-35mm, a 50 mm portrait lens, and a 24-105mm lens. These 3 lenses are perfect for
+                landscape, portrait, and event shoot.</p>
         </div>
     </div>
 </div>
@@ -166,8 +162,9 @@
     <div class="portfolio_description cell medium-10 medium-offset-1">
         <h2>portfolio</h2>
         <div class="section_hr"></div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In quis congue justo. In ornare dui at interdum
-            placerat. Aliquam aliquam nunc ex, ut tempor ante accumsan sit amet.</p>
+        <p>I like to share my works with people and get feedback from them. It is a great way to know what are the
+            outstanding parts and drawbacks of your works. Below is my recent development, design, and photography
+            works.</p>
     </div>
     <div class="portfolio_wrap cell medium-6" id="lotr" data-roundaboutindex="0">
         <div class="portfolio_overlay">
@@ -208,11 +205,12 @@
     <div class="profile_wrap cell">
         <img src="images/profile.jpg" alt="Profile Photo">
     </div>
-    <p class="cell medium-10 medium-offset-1">Vestibulum non leo sed lorem placerat ultricies. Quisque posuere lorem a
-        risus gravida varius. Integer felis
-        ipsum, imperdiet id ex eget, feugiat rutrum quam. Sed vitae justo ut sapien semper maximus quis ut urna. Duis
-        ultricies mi quis elit blandit, et finibus dui eleifend. In iaculis nibh magna, imperdiet eleifend leo cursus
-        eu.</p>
+    <p class="cell medium-10 medium-offset-1">I raised up in China and influenced by many Asian cultures, so the
+        international background makes me have a better vision on designing stuff. I can bring multiple design aspects
+        from my personal experience and my nationality background. Also, I have degree and one diploma. Both of the
+        educational experiences make me have an excellent learning skills so that I can learn fast. Furthermore, I am a
+        front-end developer that have good eyes on design. So this could be a opportunity to find a person that can
+        handle more than one parts.</p>
 </div>
 
 <div class="contact_form_container grid-x" id="main_form" data-magellan-target="main_form">
