added mobile heade image

--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -43,7 +43,7 @@
     </div>
 </div>
 
-<div class="header_image_container grid-x" id="backToTop" data-magellan-target="backToTop">
+<div class="header_image_container grid-x" id="backToTop" data-magellan-target="backToTop" data-interchange="[images/banner_photo_sm.jpg, small], [images/banner_photo.jpg, medium], [images/banner_photo.jpg, large]">
     <h2 class="cell">Hello, I'm Shan Jiang.</h2>
     <div class="scroll-to cell" data-magellan="">
         <a href="#about"><p>about</p></a>
@@ -237,10 +237,10 @@
         <img src="images/shan-logo-3.0-name-white.svg" alt="Logo">
     </div>
     <div class="social_media cell">
-        <a href="https://www.instagram.com" target="_blank"><img src="images/ins.svg" alt="Instagram"></a>
-        <a href="https://www.github.com" target="_blank"><img src="images/github.svg" alt="GitHub"></a>
-        <a href="https://www.behance.net" target="_blank"><img src="images/behance.svg" alt="Behance"></a>
-        <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+        <a href="https://www.instagram.com/jaoueis/" target="_blank"><img src="images/ins.svg" alt="Instagram"></a>
+        <a href="https://github.com/jaoueis" target="_blank"><img src="images/github.svg" alt="GitHub"></a>
+        <a href="https://www.behance.net/jiang_shanc2db" target="_blank"><img src="images/behance.svg" alt="Behance"></a>
+        <a href="https://www.linkedin.com/in/shan-jiang-795866a9/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
     </div>
     <div class="copyright cell">
         <p><span class="fa fa-copyright"></span> 2018 Shan Jiang</p>
