--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -38,6 +38,7 @@
                 <li><a href="#services" class="de-active">services</a></li>
                 <li><a href="#portfolio" class="de-active">portfolio</a></li>
                 <li><a href="#main_form" class="de-active">contact</a></li>
+                <li><a href="http://shanjiang.io/shan_jiang_resume.pdf" class="de-active" target="_blank">resume</a></li>
             </ul>
         </nav>
     </div>
