--- a/myportfolio/index.html
+++ b/myportfolio/index.html
@@ -38,13 +38,15 @@
                 <li><a href="#services" class="de-active">services</a></li>
                 <li><a href="#portfolio" class="de-active">portfolio</a></li>
                 <li><a href="#main_form" class="de-active">contact</a></li>
-                <li><a href="http://shanjiang.io/shan_jiang_resume.pdf" class="de-active" target="_blank">resume</a></li>
+                <li><a href="http://shanjiang.io/shan_jiang_resume.pdf" class="de-active" target="_blank">resume</a>
+                </li>
             </ul>
         </nav>
     </div>
 </div>
 
-<div class="header_image_container grid-x" id="backToTop" data-magellan-target="backToTop" data-interchange="[images/banner_photo_sm.jpg, small], [images/banner_photo.jpg, medium], [images/banner_photo.jpg, large]">
+<div class="header_image_container grid-x" id="backToTop" data-magellan-target="backToTop"
+     data-interchange="[images/banner_photo_sm.jpg, small], [images/banner_photo.jpg, medium], [images/banner_photo.jpg, large]">
     <h2 class="cell">Hello, I'm Shan Jiang.</h2>
     <div class="scroll-to cell" data-magellan="">
         <a href="#about"><p>about</p></a>
@@ -55,15 +57,11 @@
 <div class="about_container grid-x grid-margin-x" id="about" data-magellan-target="about">
     <h2 class="hide">About</h2>
     <section class="about_title small-10 small-offset-1 large-6 large-offset-1 cell">
-        <h3>I am a London, Ontario based front-end developer with the passion of web development and graphic
-            design.</h3>
+        <h3>I am a London, Ontario based front-end developer with a passion for web development and graphic design.</h3>
         <div class="section_hr show-for-large"></div>
     </section>
     <section class="about_text small-10 small-offset-1 large-4 large-offset-0 cell">
-        <p>I am currently an interactive media student at Fanshawe College. I can develop and design websites and also
-            be a professional photographer. I have a degree in Management and Organizational Studies from the University
-            of Western Ontario. The diverse educational background makes me have the better capability of doing work. I
-            am also a current web developer intern at Northern Commerce.</p>
+        <p>I am currently an interactive media design student at Fanshawe College, and I have a degree in Management and Organizational Studies from the University of Western University. This diverse educational background has allowed me to leverage skills from a variety of different disciplines. I am skilled in development, design, and professional photography. I am currently using these skills for an intership at Northern Commerce.</p>
     </section>
 </div>
 
@@ -88,10 +86,7 @@
     <div class="cell large-4 show-for-large"></div>
     <div class="dev grid-x cell large-8">
         <h3 class="cell large-6 large-offset-5">Development</h3>
-        <p class="cell medium-10 medium-offset-1 large-6 large-offset-5">Website development is fun and challenging. I
-            usually plan ahead before coding, deciding what website framework will need to use, is it necessary to use a
-            Content Management System, what kind of development dependencies are necessary for developing, and what
-            logic structure will the back-end part need. All these steps are important for web developing.</p>
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-5">I find website development both fun and challenging. I always plan ahead and ask myself important questions that will organize my overall coding process. Deciding what website framework I will use, what kind of development dependencies are necessary, and what logic structure the back-end will need. All these steps are important in my process of web development.</p>
         <div class="cell large-6 large-offset-5">
             <div class="section_hr"></div>
         </div>
@@ -113,11 +108,7 @@
     </div>
     <div class="design grid-x cell large-8">
         <h3 class="cell large-10 large-offset-2">Design</h3>
-        <p class="cell medium-10 medium-offset-1 large-6 large-offset-2">The most important part of design is
-            understanding what the clients want. Communicating and researching for clients are very crucial.
-            It is always the best solution that communicating and showing clients with examples to understand their
-            thoughts. After the communication, it is the time to do research for designers themselves and creating
-            multiple versions of design products, and let the clients pick up the most desirable one.</p>
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-2">The most important part of design is understanding what the client envisions for their brand. I always look to communicate design goals with the client by working through examples, and understanding their preferences. Once the client and I are on the same page, I will create a variety of different designs that they can choose from.</p>
         <div class="cell large-10 large-offset-2">
             <div class="section_hr"></div>
         </div>
@@ -138,10 +129,7 @@
     <div class="cell large-4 show-for-large"></div>
     <div class="photography grid-x cell large-8">
         <h3 class="cell large-6 large-offset-5">Photography</h3>
-        <p class="cell medium-10 medium-offset-1 large-6 large-offset-5">Five-year photography experience brings me
-            sharp eyes for capturing the beautiful moment. Whether it is a event shoot, wedding shoot, or a portrait
-            shoot, I can always find out the best angle and moment quickly with my professional gear. I will also have
-            the edited photos ready in a quick time without missing any quality.</p>
+        <p class="cell medium-10 medium-offset-1 large-6 large-offset-5">Five-years of photography experience has helped me develop a sharp eye for capturing the most beautiful moments. Whether it is an event shoot, wedding shoot, or a portrait shoot, I always find the best angle, light, and moment to create a stunning shot. These shots are always edited and uploaded punctually, while maintaining their quality.</p>
         <div class="cell large-6 large-offset-5">
             <div class="section_hr"></div>
         </div>
@@ -152,9 +140,7 @@
         <h4 class="cell large-10 large-offset-2">My gear</h4>
         <div class="my_gear cell medium-10 medium-offset-1 large-9 large-offset-2">
             <img src="images/lr_icon.svg" alt="Lightroom">
-            <p>Canon 5D Mark III and Adobe Lightroom are my best photography friends. Also, I have a wide angle lens
-                which is 16mm-35mm, a 50 mm portrait lens, and a 24-105mm lens. These 3 lenses are perfect for
-                landscape, portrait, and event shoot.</p>
+            <p>Canon 5D Mark III and Adobe Lightroom are my best photography friends. I also have a 16mm-35mm wide angle lens, a 50 mm portrait lens, and a 24-105mm variable zoom lens. These 3 lenses are perfect for landscape, portrait, and event shots.</p>
         </div>
     </div>
 </div>
@@ -163,9 +149,7 @@
     <div class="portfolio_description cell medium-10 medium-offset-1">
         <h2>portfolio</h2>
         <div class="section_hr"></div>
-        <p>I like to share my works with people and get feedback from them. It is a great way to know what are the
-            outstanding parts and drawbacks of your works. Below is my recent development, design, and photography
-            works.</p>
+        <p>I have worked with a variety of different clients. Below is my recent development, design, and photography works.</p>
     </div>
     <div class="portfolio_wrap cell medium-6" id="lotr" data-roundaboutindex="0">
         <div class="portfolio_overlay">
@@ -206,12 +190,7 @@
     <div class="profile_wrap cell">
         <img src="images/profile.jpg" alt="Profile Photo">
     </div>
-    <p class="cell medium-10 medium-offset-1">I raised up in China and influenced by many Asian cultures, so the
-        international background makes me have a better vision on designing stuff. I can bring multiple design aspects
-        from my personal experience and my nationality background. Also, I have degree and one diploma. Both of the
-        educational experiences make me have an excellent learning skills so that I can learn fast. Furthermore, I am a
-        front-end developer that have good eyes on design. So this could be a opportunity to find a person that can
-        handle more than one parts.</p>
+    <p class="cell medium-10 medium-offset-1">I was raised in China and influenced by many Asian cultures. My unique nationality allows me to draw influence from a variety of Asian cultures. I have also achieved a degree and diploma. My educational and cultural experiences have given me excellent learning skills. I learn fast, have a unique perspective, and am diligent in my work. I am a digital triple threat. I can shoot photos, develop, and design. If you’re looking for someone well-rounded, and easy to work with, shoot me a message!</p>
 </div>
 
 <div class="contact_form_container grid-x" id="main_form" data-magellan-target="main_form">
@@ -240,8 +219,10 @@
     <div class="social_media cell">
         <a href="https://www.instagram.com/jaoueis/" target="_blank"><img src="images/ins.svg" alt="Instagram"></a>
         <a href="https://github.com/jaoueis" target="_blank"><img src="images/github.svg" alt="GitHub"></a>
-        <a href="https://www.behance.net/jiang_shanc2db" target="_blank"><img src="images/behance.svg" alt="Behance"></a>
-        <a href="https://www.linkedin.com/in/shan-jiang-795866a9/" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn"></a>
+        <a href="https://www.behance.net/jiang_shanc2db" target="_blank"><img src="images/behance.svg"
+                                                                              alt="Behance"></a>
+        <a href="https://www.linkedin.com/in/shan-jiang-795866a9/" target="_blank"><img src="images/linkedin.svg"
+                                                                                        alt="LinkedIn"></a>
     </div>
     <div class="copyright cell">
         <p><span class="fa fa-copyright"></span> 2018 Shan Jiang</p>
